# VJC-Hoops-AI

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_ARCHITECTURE.md  PROJECT_CONTEXT.md  README.md  README_EN.md  ROADMAP.md  main.py  pyproject.toml  requirements.txt
docs/: architecture.md  camera-service.md  frame-manager.md  object-tracker.md  person-detector.md  video-visualization.md
src/vjc_hoops_ai/: __init__.py
src/vjc_hoops_ai/application/ports/: __init__.py  video_frame_source.py
src/vjc_hoops_ai/application/use_cases/: __init__.py  frame_manager.py
src/vjc_hoops_ai/domain/value_objects/: __init__.py  frame.py
src/vjc_hoops_ai/infrastructure/computer_vision/: __init__.py
src/vjc_hoops_ai/infrastructure/tracking/: __init__.py  object_tracker.py
src/vjc_hoops_ai/infrastructure/video/: __init__.py  camera_service.py
src/vjc_hoops_ai/infrastructure/vision/: __init__.py  person_detector.py
tests/integration/: test_video_visualization.py
tests/unit/: test_camera_service.py  test_frame_manager.py  test_object_tracker.py  test_person_detector.py
tools/: setup_project.py
